change input id

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>Новый пост</h2>
         <div class="inner_cont">
             <input type="text" id="title" placeholder="Заголовок поста">
-            <input type="text" id="boby" placeholder="Текст поста">
+            <input type="text" id="body" placeholder="Текст поста">
             <button id="btn_add">Создать пост</button>
         </div>
         <div class="posts"></div>
